--- a/gulp/stage/assets/style/yoggsoft-theme.css
+++ b/gulp/stage/assets/style/yoggsoft-theme.css
@@ -18,7 +18,7 @@ i {
   font-style: normal; }
 
 body {
-  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   font-family: "Cantata One", serif;
   font-weight: 400;
   line-height: 1.4;
