--- a/gulp/stage/assets/style/yoggsoft-theme.css
+++ b/gulp/stage/assets/style/yoggsoft-theme.css
@@ -5,20 +5,24 @@ Utils assets (Variables & mixins only)
 Front styles
 */
 root {
-  display: block; }
+  display: block;
+}
 
 html {
   size-adjust: 100%;
-  font-size: 100%; }
+  font-size: 100%;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 i {
-  font-style: normal; }
+  font-style: normal;
+}
 
 body {
-  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
   font-family: "Cantata One", serif;
   font-weight: 400;
   line-height: 1.4;
@@ -27,23 +31,34 @@ body {
   height: 100%;
   margin: 0 auto;
   overflow-x: hidden;
-  min-width: 300px; }
-  @media screen and (max-width: 75em) {
-    body {
-      font-size: 16px; } }
-  @media screen and (max-width: 60em) {
-    body {
-      font-size: 14px; } }
-  @media screen and (max-width: 48em) {
-    body {
-      font-size: 14px; } }
+  min-width: 300px;
+}
+
+@media screen and (max-width: 75em) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 60em) {
+  body {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 48em) {
+  body {
+    font-size: 14px;
+  }
+}
 
 ul {
   list-style-type: none;
   margin-top: -10px;
   max-width: 570px;
   padding: 0;
-  cursor: default; }
+  cursor: default;
+}
 
 .overlay {
   opacity: 1;
@@ -53,10 +68,12 @@ ul {
   background-color: #fff;
   width: 100%;
   height: 100%;
-  z-index: 9; }
+  z-index: 9;
+}
 
 .wrapper {
-  height: 100%; }
+  height: 100%;
+}
 
 .skill-set li {
   font-size: 95%;
@@ -72,9 +89,12 @@ ul {
   min-width: 36px;
   height: 30px;
   text-align: center;
-  overflow: hidden; }
-  .skill-set li:hover {
-    background: #126ee0; }
+  overflow: hidden;
+}
+
+.skill-set li:hover {
+  background: #126ee0;
+}
 
 .clearfix:after {
   content: " ";
@@ -82,7 +102,8 @@ ul {
   visibility: hidden;
   display: block;
   height: 0;
-  clear: both; }
+  clear: both;
+}
 
 .toggleBtn {
   position: relative;
@@ -94,9 +115,12 @@ ul {
   clear: none;
   margin-top: 3em;
   border-top: 1px solid #ececec;
-  text-align: center; }
-  .toggleBtn:hover {
-    color: #126ee0; }
+  text-align: center;
+}
+
+.toggleBtn:hover {
+  color: #126ee0;
+}
 
 .me-img {
   border-radius: 100%;
@@ -105,24 +129,36 @@ ul {
   margin-top: -10%;
   position: relative;
   width: 250px;
-  overflow: hidden; }
-  .me-img img {
-    position: relative;
-    width: 100%;
-    height: 100%; }
-  @media screen and (max-width: 75em) {
-    .me-img {
-      width: 230px;
-      height: 230px; } }
-  @media screen and (max-width: 48em) {
-    .me-img {
-      width: 200px;
-      height: 200px;
-      top: 0px; } }
-  @media screen and (max-width: 33em) {
-    .me-img {
-      width: 150px;
-      height: 150px; } }
+  overflow: hidden;
+}
+
+.me-img img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 75em) {
+  .me-img {
+    width: 230px;
+    height: 230px;
+  }
+}
+
+@media screen and (max-width: 48em) {
+  .me-img {
+    width: 200px;
+    height: 200px;
+    top: 0px;
+  }
+}
+
+@media screen and (max-width: 33em) {
+  .me-img {
+    width: 150px;
+    height: 150px;
+  }
+}
 
 .left {
   background-color: rgba(0, 0, 0, 0.025);
@@ -133,54 +169,72 @@ ul {
   position: fixed;
   width: 33.33%;
   max-width: 550px;
-  top: 0px; }
-  @media screen and (max-width: 48em) {
-    .left {
-      float: none;
-      position: relative;
-      min-width: 100%;
-      min-height: 30em;
-      clear: none; } }
-  @media screen and (max-width: 48em) {
-    .left {
-      float: none;
-      position: relative;
-      min-width: 100%;
-      min-height: 30em;
-      clear: none; } }
+  top: 0px;
+}
+
+@media screen and (max-width: 48em) {
+  .left {
+    float: none;
+    position: relative;
+    min-width: 100%;
+    min-height: 30em;
+    clear: none;
+  }
+}
+
+@media screen and (max-width: 48em) {
+  .left {
+    float: none;
+    position: relative;
+    min-width: 100%;
+    min-height: 30em;
+    clear: none;
+  }
+}
 
 .right {
   float: right;
   height: 100%;
   position: relative;
-  width: 66.66%; }
-  @media screen and (max-width: 48em) {
-    .right {
-      float: none;
-      position: relative;
-      min-width: 100%;
-      min-height: 30em;
-      clear: none; } }
-  @media screen and (max-width: 33em) {
-    .right {
-      min-height: 15em; } }
+  width: 66.66%;
+}
+
+@media screen and (max-width: 48em) {
+  .right {
+    float: none;
+    position: relative;
+    min-width: 100%;
+    min-height: 30em;
+    clear: none;
+  }
+}
+
+@media screen and (max-width: 33em) {
+  .right {
+    min-height: 15em;
+  }
+}
 
 .contact-icons {
   position: relative;
   margin: 0 auto;
   min-width: 12em;
   clear: none;
-  padding: 20px; }
+  padding: 20px;
+}
 
 .contact-info {
   display: block;
   padding: 10px;
-  text-align: center; }
-  .contact-info a {
-    text-decoration: none;
-    cursor: pointer;
-    padding: 5px;
-    color: #333332; }
+  text-align: center;
+}
+
+.contact-info a {
+  text-decoration: none;
+  cursor: pointer;
+  padding: 5px;
+  color: #333332;
+}
 
 .name-hero {
   background: #f9f9f9;
@@ -191,40 +245,62 @@ ul {
   position: absolute;
   right: 0;
   top: 0;
-  width: 85%; }
-  .name-hero h1 {
-    font-size: 1.5em;
-    text-align: center; }
-    .name-hero h1 em {
-      color: rgba(0, 0, 0, 0.3);
-      font-style: normal;
-      font-weight: 700; }
-  .name-hero p {
-    color: rgba(0, 0, 0, 0.5);
-    font-size: .75em;
-    line-height: 1.5;
-    margin: 0 8px 0 0;
-    text-align: center; }
-  .name-hero .name-text {
-    margin: 0 auto;
-    width: 85%; }
+  width: 85%;
+}
+
+.name-hero h1 {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.name-hero h1 em {
+  color: rgba(0, 0, 0, 0.3);
+  font-style: normal;
+  font-weight: 700;
+}
+
+.name-hero p {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: .75em;
+  line-height: 1.5;
+  margin: 0 8px 0 0;
+  text-align: center;
+}
+
+.name-hero .name-text {
+  margin: 0 auto;
+  width: 85%;
+}
 
 .inner {
   margin: 10px auto;
   max-width: 900px;
-  padding: 3em; }
-  .inner h1 {
-    font-size: 1.75em; }
-  .inner p {
-    color: #999; }
-    .inner p em {
-      color: rgba(0, 0, 0, 0.75); }
-    .inner p i {
-      color: rgba(0, 0, 0, 0.75); }
-  .inner .item {
-    margin: 50px auto; }
-  .inner section {
-    margin: 50px auto; }
+  padding: 3em;
+}
+
+.inner h1 {
+  font-size: 1.75em;
+}
+
+.inner p {
+  color: #999;
+}
+
+.inner p em {
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.inner p i {
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.inner .item {
+  margin: 50px auto;
+}
+
+.inner section {
+  margin: 50px auto;
+}
 
 .outer {
   margin: 0 auto;
@@ -232,20 +308,33 @@ ul {
   height: 100%;
   max-height: 900px;
   padding: 3em;
-  text-align: justify; }
-  .outer h1 {
-    font-size: 1.75em; }
-  .outer p {
-    color: #999; }
-    .outer p em {
-      color: rgba(0, 0, 0, 0.75); }
-    .outer p i {
-      color: rgba(0, 0, 0, 0.75); }
-  .outer section {
-    margin: 100px auto; }
+  text-align: justify;
+}
+
+.outer h1 {
+  font-size: 1.75em;
+}
+
+.outer p {
+  color: #999;
+}
+
+.outer p em {
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.outer p i {
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.outer section {
+  margin: 100px auto;
+}
 
 .iconspace {
-  padding: 0px 1px; }
+  padding: 0px 1px;
+}
 
 .tdright {
-  text-align: right; }
+  text-align: right;
+}
